
classDiagram

    direction BT

    namespace geo2d {
    class HasParents {
    <<interface>>
    }

    class GObject {
    -col Color
    -pivot Vector3
    -Id UUID
    +draw(graphics2D: Graphics2D)
    +drawSelected(graphics2D: Graphics2D)
    +Constructor()
    +Constructor(colour: Color)
    +getPivot() Vector3
    +deleteSelf() boolean
    +setPivot(pivot: Vector3)
    +setColour(colour: Color)
    +getColour() Color
    +getId() UUID
    +setId(id: UUID)
    +equals(obj: Object) boolean
    +hashCode() int
    +onEvent(event: EventType, properties: EventPayload)
    }

    class GPoint {
    +DIAMETER integer = 7$
    -parents HashSet~GLine~
    +fromRaw(id: string, point: Vector3)$ GPoint
    +Constructor(v3: Vector3)
    +equals(obj: Object) boolean
    +toString() string
    +getParents() HashSet~GLine~
    +addParent(parent: GLine)
    +removeParent(parent: GLine)
    }

    class GLine {
    -startPoint GPoint
    -endPoint GPoint
    -parents HashSet~GTri~
    +fromRaw(id: string, A: GPoint, B: GPoint)$ GLine
    +Constructor(A: GPoint, B: GPoint)
    +getEnd() GPoint
    +getStart() GPoint
    +length() real
    +toString() string
    +getPointStream() Stream~GPoint~
    +getDupeObjectToCheck() Vector3
    +handlePossibleDuplicates(type: EventType, payload: GPoint.GPointMovedEvent)
    }

    class GTri {
    -LegA GLine
    -LegB GLine
    -LegC GLine
    -hidden boolean
    +fromRaw(id: string, col: Color, legA: GLine, legB: GLine, legC: GLine)$ GTri
    -drawDist()
    -winding Winding
    -doubleSided boolean
    +getWinding() Winding
    -setWinding(GPoint A, GPoint B, GPoint C)
    +normal() Vector3
    +calcDepth() real
    +euclideanDist() real
    +drawSelected(graphics2D: Graphics2D)
    +Constructor(c: Color, A: GPoint, B: GPoint, C: GPoint)
    +Constructor(c: Color, A: GLine, B: GLine, C: GLine)
    +isHidden() boolean
    +setHidden(hidden: boolean)
    +calcNormal(A: Vector3, B: Vector3, C: Vector3)
    +getLegA() GLine
    +getLegB() GLine
    +getLegC() GLine
    +area() real
    +toString() string
    +getLegStream() Stream~GLine~
    +getDupeObjectToCheck() Vector3
    +handlePossibleDuplicates(type: EventType, payload: GPoint.GPointMovedEvent)
    }
        }

    namespace events {
    class IdempotentEventListener
    class EventListener
    }


    %%    note for EventListener "Can be registered to listen to an event from some object implementing EventListenerInterface"
    %%
    %%    note for IdempotentEventListener "An EventListener with the goal to run once by checking if a value was already changed"
    %%
    %%    note for SceneObjectList "Any first user-tangible object. This can participate with the layer tree and has other special properties."
    %%
    %%    note for BaseObject "Provides the base properties that a core abstract geometry class requires"
    %%
    %%    note for HasParents "An interface for keeping track of the 'parent' this node is attached to."

    GPoint --|> GObject
    GLine --|> GObject
    GTri --|> GObject

    GObject --> EventListener

    GPoint --> HasParents
    GLine --> HasParents
    GLine --> IdempotentEventListener
    GTri --> IdempotentEventListener

    GLine --* "2" GPoint : Holds a reference of (Composition)
    GTri --* "3" GLine : Holds a reference of (Composition)

    Thing --* "0..n" GObject : Holds many references of (Composition)
